# hm-diag

./: .gitignore  Dockerfile  Edit column names in bigquery table.md  GCS_DIAGNOSTICS_SHIPPING.md  MANIFEST.in  README.md  alembic.ini  dbus-wait.sh  default.conf  diagnosticsProgram.py  docker-compose.yml  genHTML.py  genHTML.py.bak  preview.html  pyproject.toml  requirements.txt  setenv.sh  setup.py  start-diag.sh  start.sh  startDiag.sh  start_admin_session  start_diagnostics.sh  test-requirements.txt  thingsix_config.yaml
.devbots/: needs-triage.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: compile-docker.yml  docker-lints.yml  general-linting.yml  python-linting.yml  python-tests.yml  rust-compiler.yml  security-audit.yml  shellcheck.yml  test.yml
bigquery/: README.md  bigquery_to_pydantic.py  bq_funcs.js  bq_schema.json  diag_import_script.py  diag_schema.json  events.schema  events_import_script.py  events_schema.json  import_script.py  requirements.txt
diagnostics-program/: diagnosticsProgram.py  hardware-detector.py  hardware_detector.py  html-generator.py  html_generator.py  main.py  startDiag.sh  start_diagnostics.sh  utils.py
diagnostics-program/test/: test_blockchain_helium_height.py  test_config_search_param.py  test_get_env_var.py  test_get_mac_address.py  test_get_miner_diag.py  test_get_public_keys.py  test_get_rpi_serial.py  test_write_data_to_file.py
hw_diag/: app.py  cache.py  constants.py  lock_singleton.py  lock_singleton_demo.py  tasks.py  wsgi.py
hw_diag/database/: __init__.py  config.py  migrations.py
hw_diag/diagnostics/: add_gateway_txn_diagnostic.py  bigquery_data_model.py  bt_diagnostic.py  bt_lte_diagnostic.py  device_status_diagnostic.py  diagnostic.py  diagnostics_report.py  ecc_diagnostic.py  env_var_diagnostics.py  exceptions.py  gateway_diagnostics.py  json_expected_key_diagnostic.py  key_diagnostics.py  lora_diagnostic.py  lte_diagnostic.py  mac_diagnostics.py  nebra_json_diagnostics.py  pf_diagnostic.py  pgp_signed_json_diagnostic.py  provision_key_diagnostic.py  rpi_serial_diagnostic.py  serial_number_diagnostic.py  shutdown_gateway_diagnostic.py  updated_at_diagnostic.py
hw_diag/templates/: backup_restore.html  device_configuration.html  device_info.html  diagnostics_page.html  diagnostics_page_light_miner.html  helium_info.html  login_form.html  myst.html  openfleet.html  password_change_form.html  password_reset.html  reconfigure_countdown.html  template.html  template_hyper.html  thix_dashboard.html  thix_error.html  thix_onboard.html  thix_set_region.html  thix_setup.html  upgrade.html  (+5 more)
keys/: manufacturing-key.gpg
migrations/: env.py
quectel/: README.md
(+165 files in other folders)
