[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hw_diag"
version = "1.0"
description = "Diagnostics tool for Nebra Helium Hotspot software"
authors = ["Nebra Ltd <support@nebra.com>"]
readme = "README.md"
packages = [
    { include = "hw_diag" }
]

[tool.poetry.dependencies]
python = "~3.11"
alembic = "~1.9.1"
bcrypt = "~3.2.2"
certifi = "~2022.12.7"
click = "~8.1.3"
dbus-python = "~1.2.16"
Flask = "~2.3.2"
Flask-APScheduler = "~1.12.4"
Flask-Caching = "~2.0.1"
grpcio = "~1.53.0"
gunicorn = "~20.1.0"
hm-pyhelper = "0.14.14"
icmplib = "~3.0.3"
ipaddress = "~1.0.23"
password-strength = "~0.0.3.post2"
persist-queue = "~0.8.0"
psutil = "~5.9.4"
pydantic = "~1.10.4"
python-gnupg = "~0.5.0"
requests = "~2.31.0"
retry = "~0.9.2"
sentry-sdk = { version = "~1.17.0", extras = ["Flask"] }
SQLAlchemy = "1.4.46"
uptime = "3.0.1"
werkzeug = "2.3.3"

[tool.poetry.group.dev.dependencies]
bandit = { version = "~1.7.4", extras = ["toml"] }
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ruff = "~0.0.265"
responses = "^0.22.0"

[tool.poetry.scripts]
hm_diag = "hw_diag.app:main"

[tool.ruff]
line-length = 120
exclude = ["hw_diag/tests"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["tests"]
