[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hw_diag"
version = "1.0"
description = "Diagnostics tool for Nebra Helium Hotspot software"
authors = ["Nebra Ltd <support@nebra.com>"]
readme = "README.md"
packages = [
    { include = "hw_diag" }
]

[tool.poetry.dependencies]
python = "~3.11"
alembic = "~1.11.1"
bcrypt = "~4.0.1"
certifi = "~2023.5.7"
click = "~8.1.4"
dbus-python = "~1.2.16"
Flask = "~2.3.2"
Flask-APScheduler = "~1.12.4"
Flask-Caching = "~2.0.2"
grpcio = "~1.56.0"
gunicorn = "~20.1.0"
hm-pyhelper = "0.14.22"
icmplib = "~3.0.3"
ipaddress = "~1.0.23"
password-strength = "~0.0.3.post2"
persist-queue = "~0.8.1"
psutil = "~5.9.5"
pydantic = "~2.0.2"
python-gnupg = "~0.5.0"
requests = "~2.31.0"
retry = "~0.9.2"
sentry-sdk = { version = "~1.27.1", extras = ["Flask"] }
SQLAlchemy = "2.0.18"
uptime = "3.0.1"
werkzeug = "2.3.6"

[tool.poetry.group.dev.dependencies]
bandit = { version = "~1.7.5", extras = ["toml"] }
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "~0.0.277"
responses = "^0.23.1"

[tool.poetry.scripts]
hm_diag = "hw_diag.app:main"

[tool.ruff]
line-length = 120
exclude = ["hw_diag/tests"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = ["tests"]
